Add environment variables to index.html with ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,10 @@
     <script src="bower/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script>
+      window.env = <%- JSON.stringify(env) %>
+    </script>
+
     <script src="app.min.js"></script>
   </body>
 </html>
