--- a/src/app/components/intro/intro.html
+++ b/src/app/components/intro/intro.html
@@ -1,17 +1,17 @@
 <div class="">
   <section class="ui">
-    <h1 class="header1">We are listening</h1>
-    <h2 class="header1">We is awesome</h2>
+    <h1 class="header1">MyApp</h1>
+    <h2 class="header1">Is awesome</h2>
     <!-- <div class="ui segments"> -->
     <div>
       <div class="ui two column stackable grid">
         <div class="column">
-          COLUM<!--<img class="ui spaced image" src="img/nodejs.png">-->
+          <p>
+            This is the front page called intro. It's nested inside main-view as you can see from the source code. Main-view consists of navbar and basic styling and intro is just the content.
+          </p>
         </div>
         <div class="column">
-          <p>
-            -<div record></div>
-          </p>
+          <img class="ui spaced image" src="img/nodejs.png">
         </div>
       </div>
     </div>
