--- a/src/app/components/record/record.html
+++ b/src/app/components/record/record.html
@@ -6,12 +6,17 @@
     <div>
       <div class="ui two column stackable grid">
         <div class="column" ng-controller="RecordController">
-          <p>
-            {{ notes }}
-          </p>
+          <form>
+            <input type="checkbox" ng-click="toggleRecord()"/>
+          
+            <p>
+              Recorder is {{ recorder.status }}
+            </p>
+          </form>
         </div>
         <div class="column">
-          <img class="ui spaced image" src="img/nodejs.png">
+          Other column
+          <!--<img class="ui spaced image" src="img/nodejs.png">-->
         </div>
       </div>
     </div>
