--- a/src/app/components/intro/intro.html
+++ b/src/app/components/intro/intro.html
@@ -7,7 +7,8 @@
       <div class="ui two column stackable grid">
         <div class="column">
           <p>
-            This is the front page called intro. It's nested inside main-view as you can see from the source code. Main-view consists of navbar and basic styling and intro is just the content.
+            This is the front page called intro. It's nested inside main-view as you can see from the source code.
+            Main-view consists of navbar and basic styling and intro is just the content.
           </p>
         </div>
         <div class="column">
