--- a/src/app/components/record/record.html
+++ b/src/app/components/record/record.html
@@ -4,8 +4,8 @@
     <h2 class="header1">..sshh..</h2>
     <!-- <div class="ui segments"> -->
     <div>
-      <div class="ui two column stackable grid">
-        <div class="column" ng-controller="RecordController">
+      <div class="ui two column stackable grid" ng-controller="RecordController">
+        <div class="column">
           <form>
             <input type="checkbox" ng-click="toggleRecord()"/>          
             <p>
@@ -14,7 +14,8 @@
           </form>
         </div>
         <div class="column">
-          <p ng-show="(recorder.status == 'stopped')">
+          <h3>{{ recorder.status }}</h3>
+          <p ng-show="(recorder.status === 'stopped')">
             <button ng-click="reloadPage()">Try again</button>
           </p>        
         </div>
