this is how you get a circular dependency. No rootscope for me?

--- a/src/app/components/record/record.html
+++ b/src/app/components/record/record.html
@@ -14,7 +14,7 @@
           </form>
         </div>
         <div class="column">
-          <h3>{{ recorder.status }}</h3>
+          <h3>{{ recorder.note }}</h3>
           <p ng-show="(recorder.status === 'stopped')">
             <button ng-click="reloadPage()">Try again</button>
           </p>        
