Notes go from microfone to logger to decorator to noteservice. Someone should update sscope

--- a/src/app/components/record/record.html
+++ b/src/app/components/record/record.html
@@ -16,7 +16,7 @@
         <div class="column">
           <h3>{{ recorder.note }}</h3>
           <p ng-show="(recorder.status === 'stopped')">
-            <button ng-click="reloadPage()">Try again</button>
+            Maybe we got some notes?
           </p>        
         </div>
       </div>
