--- a/src/app/components/record/record.html
+++ b/src/app/components/record/record.html
@@ -15,10 +15,11 @@
           </form>
         </div>
         <div class="column">
-          <h3>{{ recorder.note}}</h3>
+          <h3>{{ recorder.song}}</h3>
           <p ng-show="(recorder.status === 'stopped')">
-            Maybe we got some notes?
+            Maybe we got some notes?          
           </p>        
+          <font color="red"><marquee><blink>Plese use headphones!</blink></marquee></font>
         </div>
       </div>
     </div>
