--- a/src/app/components/record/record.html
+++ b/src/app/components/record/record.html
@@ -15,7 +15,7 @@
           </form>
         </div>
         <div class="column">
-          <h3>{{ recorder.song}}</h3>
+          <div song></div>
           <p ng-show="(recorder.status === 'stopped')">
             Maybe we got some notes?          
           </p>        
