Now with two pages

--- a/src/app/components/playback/playback.html
+++ b/src/app/components/playback/playback.html
@@ -1,11 +1,11 @@
 <div class="">
   <section class="ui">
-    <h1 class="header1">Other stuff</h1>
+    <h1 class="header1">Play sheet music</h1>
     <div>
       <div class="ui two column stackable grid">
         <div class="column">
           <p>
-            Other page.
+            This is what you got
           </p>
         </div>
       </div>
