--- a/src/app/components/layout-directives/nav-top2.html
+++ b/src/app/components/layout-directives/nav-top2.html
@@ -11,9 +11,9 @@
       <div id="navbar-collapse" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li></li>
-          <li><a class="" ng-href="#/intro">Intro</a></li>
+          <li><a class="" ng-href="#/record">Rec</a></li>
           <li></li>
-          <li><a class="" ng-href="#/other">Other</a></li>
+          <li><a class="" ng-href="#/playback">Play</a></li>
           <li></li>
           <li><a href="https://twitter.com"><i class="fa fa-twitter-square large"></i></a></li>
           <li><a href="https://www.facebook.com"><i class="fa fa-facebook-square large"></i></a></li>
