--- a/src/app/components/layout-directives/nav-top2.html
+++ b/src/app/components/layout-directives/nav-top2.html
@@ -6,7 +6,7 @@
           <span class="sr-only">Toggle navigation</span>
           <i class="fa fa-bars fa-2x"></i>
         </button>
-        <a id="brand" class="clearfix navbar-brand" href="/" alt="logo"><img class="nav-logo-size" src="/static/img/logo.png"></a>
+        <a id="brand" class="clearfix navbar-brand" href="/" alt="logo"><img width="20" class="nav-logo-size" src="img/logo.png"></a>
       </div>
       <div id="navbar-collapse" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
