build modified so that vexflow now starts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
     <script src="bower/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower/Wad/build/wad.min.js"></script>
+    <script src="bower/vexflow/releases/vexflow-min.js"></script>
 
     <script>
       window.env = <%- JSON.stringify(env) %>
