own notes still undefined but now the recorder really stops! Some refactoring also, uglify might work now if i find where it was in the build

--- a/src/app/components/record/record.html
+++ b/src/app/components/record/record.html
@@ -19,7 +19,7 @@
           <p ng-show="(recorder.status === 'stopped')">
             Maybe we got some notes?          
           </p>        
-          <font color="red"><marquee><blink>Plese use headphones!</blink></marquee></font>
+          <font color="red"><marquee><blink>Please use headphones!</blink></marquee></font>
         </div>
       </div>
     </div>
