UI finishing touches

--- a/src/app/components/layout-directives/nav-top2.html
+++ b/src/app/components/layout-directives/nav-top2.html
@@ -15,10 +15,16 @@
           <li></li>
           <li><a class="" ng-href="#/playback">Play</a></li>
           <li></li>
+          <li>&nbsp;</li>
+          <li>&nbsp;</li>
+          <li>&nbsp;</li>
+          <li>&nbsp;</li>
+          <!--
           <li><a href="https://twitter.com"><i class="fa fa-twitter-square large"></i></a></li>
-          <li><a href="https://www.facebook.com"><i class="fa fa-facebook-square large"></i></a></li>
-          <li></li>
-          <li><a class="" href="#/login">Log in</a></li>
+           <li><a href="https://www.facebook.com"><i class="fa fa-facebook-square large"></i></a></li>
+           <li></li>
+           <li><a class="" href="#/login">Log in</a></li>
+          -->
         </ul>
       </div>
     </div>
