--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -3,6 +3,11 @@
   <main class="container">
     <aside>
     </aside>
-    <div ui-view></div>
+    <div ui-view>
+      <h3>Music superhero</h3>
+      <p>A small experimental tool that converts microphone sounds into musical notation</p>
+      <p><a href="/#/record">-> START</a></p>
+      <p><small>For instructions/updates see <a href="https://github.com/ismoaulaskari/music-superhero">https://github.com/ismoaulaskari/music-superhero</a></small></p>
+    </div>
   </main>
 </div>
