--- a/src/app/components/record/record.html
+++ b/src/app/components/record/record.html
@@ -17,9 +17,9 @@
         <div class="column">
           <div song></div>
           <p ng-show="(recorder.status === 'stopped')">
-            Maybe we got some notes?          
+            Maybe we got some <a href="/#/playback">notes?</a>          
           </p>        
-          <font color="red"><marquee><blink>Please use headphones!</blink></marquee></font>
+          <font color="red"><marquee><blink>Please use headphones and give us permission to use the microphone!</blink></marquee></font>
         </div>
       </div>
     </div>
